fix(hint): adjust resizing and z-index

--- a/packages/components/src/components/bal-hint/bal-hint.sass
+++ b/packages/components/src/components/bal-hint/bal-hint.sass
@@ -31,5 +31,6 @@
       left: 0
       right: 0
       bottom: 0
+      z-index: 16
       +modifier('active')
         display: block
